scripts update
